--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,70 @@
 *{
-
+  margin: 0;
+  padding: 0;
+}
+html, body{
+  height: 100%;
 }
 
 body{
-  background-color: antiquewhite;
-  display: block;
+  background-color: #F3E9E3;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  z-index: 0;
+}
+
+#navbar a{
+  color: #403234;
+  text-decoration: none;
+  font-size: 2vw;
+  margin: 10vh 7vw;
 }
 
 h1{
   text-align: center;
+}
+
+#navbar{
+  display: flex;
+  flex-direction: row;
+  color: #403234;
 
 }
 
-nav{
-  display: grid;
-  grid-template: 4 1 auto;
+.content{
+  flex: 1 0 auto;
+}
+
+#footer{
+  flex-shrink: 0;
+  background-color: #697477;
+  text-align: center;
+  position: sticky;
+  bottom: 0;
+
+}
+
+#moreFooter{
+  z-index: -1;
+  /*height: 20vh;*/
+}
+
+.main{
+  background-color: #403234;
+  float: right;
+  width: 35vw;
+  margin: 5vh auto;
+  margin-right: 3vw;
+  padding: 5vw;
+  border-radius: 2em;
+}
+
+.main p{
+  font-size: 2em;
+}
+
+#contributors{
+  display: flex;
+  flex: auto;
 }
