--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1{
   display: flex;
   flex-direction: row;
   color: #403234;
-
+  background-color: rgb(214 68 68 / 12%);
 }
 
 .content{
@@ -46,11 +46,12 @@ h1{
 }
 
 #moreFooter{
-  z-index: -1;
-  /*height: 20vh;*/
+  display: flex;
+  flex: auto;
+
 }
 
-.main{
+.main p{
   background-color: #403234;
   float: right;
   width: 35vw;
@@ -58,13 +59,15 @@ h1{
   margin-right: 3vw;
   padding: 5vw;
   border-radius: 2em;
-}
-
-.main p{
   font-size: 2em;
 }
 
-#contributors{
-  display: flex;
-  flex: auto;
+#contributor{
+  z-index: -1;
+  /*height: 20vh;*/
+}
+
+.images{
+  max-width: 30vw;
+  margin: 2vw;
 }
