--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ h1{
 .contributor{
   z-index: -1;
   margin: auto;
+  flex: 1 0 30%;
   /*height: 20vh;*/
 }
 
@@ -77,6 +78,7 @@ h1{
   flex: 80%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 #resources{
