--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html, body{
@@ -10,9 +11,6 @@ html, body{
 
 body{
   background-color: #F3E9E3;
-  display: flex;
-  flex-direction: column;
-  color: white;
   z-index: 0;
 }
 
@@ -292,3 +290,4 @@ ul {
     margin-top: 10px;
     margin-bottom: 10px;
   }
+}
