--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ h2 {
   flex: 50%;
   padding: 30px 0px 30px 0px;
   margin-top: 20px;
+  margin-right: 10%;
 }
 /*SOLUTION-PAGE*/
 .solution-text-white{
@@ -281,21 +282,55 @@ ul {
   padding-left: 40px;
 }
 
+.topflex-sol{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.topflex-solleft{
+  flex: 70%;
+  margin-left: 10%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+}
+.topflex-solright p{
+  font-family: georgia, serif;
+  font-size: 40px;
+  text-align: center;
+}
+.topflex-solright{
+  flex: 30%;
+  margin-right: 10%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+
+}
 
 @media screen and (max-width: 800px){
   /*PROBLEM-PAGE*/
   .text-wrap-left, .text-wrap-right{
     float: none;
-    margin: 10 0 10 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
+    /*margin: 10 0 10 0;
+  }*/
   .flex-pro {
     flex-direction: column;
   }
   .flex-leftpro {
     margin-left: 0;
+    margin-bottom: 0;
   }
   .flex-rightpro {
-    margin-left: 10%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
   }
 /*Solution-page*/
   .flex-so {
@@ -312,5 +347,8 @@ ul {
     margin-right: 10%;
     margin-top: 10px;
     margin-bottom: 10px;
+  }
+  .topflex-sol{
+    flex-direction: column;
   }
 }
