--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ html, body{
 body{
   background-color: #F3E9E3;
   z-index: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 h1{
@@ -51,11 +53,8 @@ h1{
 /********Footer*******/
 
 #footer{
-  flex-shrink: 0;
   background-color: #E26D5C;
   text-align: center;
-  position: sticky;
-  bottom: 0;
   display: flex;
   flex-direction: column;
 }
@@ -66,7 +65,6 @@ h1{
 }
 
 .contributor{
-  z-index: -1;
   margin: auto;
   flex: 1 0 30%;
   /*height: 20vh;*/
@@ -165,6 +163,10 @@ h1{
 }
 
 /**********Resources side********/
+
+#resource{
+  color: white;
+}
 
 #resources{
   margin: 1vh auto;
