index ser bra ut på stor skjerm

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ h1{
 /********Footer*******/
 
 #footer{
+  color: white;
   background-color: #E26D5C;
   text-align: center;
   display: flex;
@@ -91,21 +92,21 @@ h1{
 
 .section-solution {
   width: 100%;
-  height: 200px;
   background-color: #F3E9E3;
 }
 
 .section-challenge {
   width: 100%;
-  height: 320px;
   background-color: #22333b;
 
 }
 
 .section-container {
-  width: 60%;
+  width: 70%;
   margin: auto;
-  padding: 40px;
+  padding: 5vw;
+  display: flex;
+  flex-direction: row;
 }
 
 .button {
@@ -122,13 +123,11 @@ h1{
 }
 
 .section-content {
-  width: 60%;
-  float: left;
+  flex: 60%;
 }
 
 .section-image {
-  width: 30%;
-  float: right;
+  margin: auto 4vw;
 }
 
 .section-challenge .section-content {
@@ -146,7 +145,7 @@ h1{
   margin-right: 3vw;
   padding: 5vw;
   border-radius: 2em;
-  font-size: 5em;
+  font-size: 4vh;
   color: #333548;
 }
 
@@ -160,6 +159,17 @@ h1{
   height: 290px;
   width: 290px;
   box-shadow: 5px 10px 8px #888888:
+}
+
+.intro{
+  display: flex;
+  flex-direction: row;
+}
+
+#distancing{
+  flex: 45%;
+  max-width: none;
+  width: 55vw;
 }
 
 /**********Resources side********/
@@ -275,9 +285,9 @@ h2 {
   line-height: 2em;
   letter-spacing: 1px;
 }
-img{
+/* img{
   max-width: 100%;
-}
+} */
 
 .flex-so {
   display: flex;
@@ -387,4 +397,7 @@ ul {
   .topflex-sol{
     flex-direction: column;
   }
+
+  /****Hoved****/
+
 }
