--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,10 @@ h1{
   text-align: left;
 }
 
+#navbar img{
+  max-width: 100%;
+}
+
 #navbar{
   display: flex;
   flex-direction: row;
@@ -80,6 +84,7 @@ h1{
 
 #resources{
   flex: 20%;
+  color: white;
 }
 
 /********Hoved div**********/
