--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /*******Alle sider*********/
 *{
+  font-family: tahoma;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -505,7 +506,7 @@ main{
   padding: 2em;
 }
 .app_txt{
-  font-family: 'Segoe UI', sans-serif;   
+  font-family: 'Segoe UI', sans-serif;
 }
 .app_txt h1{
   font-size: 2em;
