--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ h2 {
   flex: 1 0 auto;
 }
 
+.darkDiv{
+  background-color: #22333b;
+}
+
 /*********Navbar menu ************/
 
 #navbar a{
@@ -116,8 +120,6 @@ h2 {
 
 .section-challenge {
   width: 100%;
-  background-color: #22333b;
-
 }
 
 .section-container {
@@ -274,7 +276,6 @@ h2 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: #424B4E;
 }
 .flex-leftpro {
   flex: 40%;
@@ -322,7 +323,6 @@ h2 {
 .flex-leftso {
   margin-right: 10px;
   flex: 50%;
-  background-color: #424B4E;
   padding: 20px;
   text-align: center;
   border-radius: 2em;
@@ -331,7 +331,6 @@ h2 {
 .flex-rightso {
   margin-left: 10px;
   flex: 50%;
-  background-color: #424B4E;
   padding: 20px;
   text-align: center;
   border-radius: 2em;
@@ -498,7 +497,6 @@ main{
   width: 100%;
 }
 .wrapper_dark{
-  background: #424B4E;
   color: white;
   padding: 2em;
 }
