--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ h2 {
   background-color: #F3E9E3;
 }
 
-
 .section-challenge {
   width: 100%;
 }
@@ -161,12 +160,36 @@ h2 {
 
 .primary-heading {
   width: 35vw;
-  margin: 5vh auto;
+  margin: auto;
+  margin-top: -2vw;
   margin-right: 3vw;
-  padding: 5vw;
+  padding: 7vw;
   border-radius: 2em;
-  font-size: 3vh;
+  font-size: 4vh;
+  font-size:calc(12px + 1.3vw);
   color: #333548;
+}
+
+.intro{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: -6vw;
+}
+
+.scroll-down {
+  text-align: center;
+  font-size: 1.2em;
+  margin-bottom: 1.6vw;
+}
+
+#arrow-down {
+  display: flex;
+  margin: auto;
+  height: 4em;
+}
+
+#arrow-down:hover {
+  opacity: 80%;
 }
 
 #crowd-image {
@@ -176,28 +199,24 @@ h2 {
 }
 
 #app-image {
-  max-height: 75vh;
+  max-height: 50vh;
+  margin-right: 8vw;
   /*box-shadow: 5px 10px 8px #888888;*/
 }
 
-.intro{
-  display: flex;
-  flex-direction: row;
+#distancing{
+  height: 30vw;
+  max-width: 40vw;
+  width: 900px;
+  margin-top: 2vw;
 }
 
-#distancing{
-  flex: 100%;
-  height: 15vw;
-}
-.arrow-down {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: 4vw;
-  margin-bottom: 30px;
-}
-.arrow-down:hover {
-  opacity: 80%;
+#sustainable-goal3{
+  position: fixed;
+  width: 5.5em;
+  margin: 0;
+  bottom: 0;
+  right: 0;
 }
 /**********Resources side********/
 
@@ -374,6 +393,7 @@ ul {
   }
   .intro {
     flex-direction: column;
+    margin-bottom: 0.5vw;
   }
   .primary-heading {
     margin: auto;
@@ -389,7 +409,7 @@ ul {
   }
   #app-image {
     height:40vw;
-    width: 40vw;
+    width: 20vw;
     margin-top: 50px;
     margin-bottom: 10px;
   }
