--- a/css/style.css
+++ b/css/style.css
@@ -493,7 +493,7 @@ main{
   width: 100%;
   height: auto;
   background: #f3e9e3;
-  box-shadow: inset 0px 1px 3px rgba(100,100,100,0.5);
+  /*box-shadow: inset 0px 1px 3px rgba(100,100,100,0.5);*/
 }
 .divices{
   width: 100%;
@@ -508,6 +508,7 @@ main{
 .divices_img img{
   height: auto;
   max-width: 50vw;
+  transition: 2s;
 }
 .divices_txt{
   padding: 0em 6em;
@@ -519,7 +520,6 @@ main{
   height: 35em;
   width: 100%;
   padding: 0.5em;
-  /*display: flex;*/
 }
 .wrapper_dark{
   color: white;
@@ -527,7 +527,7 @@ main{
 
 .app_txt h1{
   font-size: 30px;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 .app_txt p{
   text-align: left;
@@ -551,13 +551,89 @@ main{
 }
 .app_img{
   height: 100%;
-  padding: 3em;
 }
 .app_img img{
-  height: 30em;
+  height: 28em;
   width: auto;
+  transition: 2s;
 }
 .app_img_tablet img{
   height: 45vh;
   width: 35vw;
+}
+
+@media screen and (max-width: 800px){
+  main{
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: auto;
+    background: #f3e9e3;
+    /*box-shadow: inset 0px 1px 3px rgba(100,100,100,0.5);*/
+  }
+  .divices{
+    width: 100%;
+    max-height: auto;
+  }
+  .divices_img{
+    height: auto;
+    width: 100%;
+    padding-top: 2em;
+    padding-bottom: 1em;
+  }
+  .divices_img img{
+    height: auto;
+    max-width: 50vw;
+  }
+  .divices_txt{
+    padding: 0em 6em;
+    font-weight: 200;
+    font-size: 28px;
+    line-height: 1.5em;
+  }
+  .prototype{
+    height: 35em;
+    width: 100%;
+    padding: 0.5em;
+  }
+  .wrapper_dark{
+    color: white;
+  }
+  
+  .app_txt h1{
+    font-size: 30px;
+    margin-top: 5%;
+  }
+  .app_txt p{
+    text-align: left;
+    margin-top: 4%;
+    margin-left: 5%;
+    margin-right: 5%;
+    line-height: 2em;
+    letter-spacing: 1px;
+  }
+  .wrapper_left{
+    float: left;
+    width: 50%;
+    height: 100%;
+    padding: 1em;
+  }
+  .wrapper_right{
+    float: right;
+    width: 50%;
+    height: 100%;
+    padding: 3em;
+  }
+  .app_img{
+    height: 100%;
+  }
+  .app_img img{
+    height: 28em;
+    width: auto;
+  }
+  .app_img_tablet img{
+    height: 45vh;
+    width: 35vw;
+  }
+  
 }
