--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h2 {
 }
 
 .section-container {
-  width: 70%;
+  width: 75%;
   margin: auto;
   padding: 5vw;
   display: flex;
@@ -194,8 +194,7 @@ h2 {
 
 #crowd-image {
   height: 19vw;
-  width: 30vw;
-  box-shadow: 5px 10px 8px #888888:
+  box-shadow: 5px 10px 8px #888888;
 }
 
 #app-image {
@@ -386,107 +385,6 @@ ul {
 
 }
 
-@media screen and (max-width: 800px){
-  /*Hjemside*/
-  .section-container {
-    flex-direction: column;
-  }
-  .intro {
-    flex-direction: column;
-    margin-bottom: 0.5vw;
-  }
-  .primary-heading {
-    width: auto;
-  }
-  #distancing {
-    margin: auto;
-    min-width: 70vw;
-    height: auto;
-  }
-  #crowd-image {
-    height:25vw;
-    width: 40vw;
-    margin-top: 50px;
-    margin-bottom: 10px;
-  }
-  #app-image {
-    height:40vw;
-    width: 20vw;
-    margin-top: 50px;
-    margin-bottom: 10px;
-  }
-  .section-image {
-    margin: 0;
-  }
-  /*PROBLEM-PAGE*/
-
-  .flex-challenge{
-    flex-direction: column;
-  }
-  .flex-challenge-right{
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 30px;
-  }
-  .flex-challenge-right img{
-    max-width: 100%;
-  }
-  .flex-leftpro img{
-    max-width: 100%;
-  }
-  .center img{
-    max-width: 100%;
-  }
-  .text-wrap-left, .text-wrap-right{
-    float: none;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin: 10 0 10 0;
-  }
-  .flex-pro {
-    flex-direction: column;
-  }
-  .flex-leftpro {
-    display: block;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 30px;
-  }
-  .flex-rightpro {
-
-    margin-left: 0;
-    margin-bottom: 30px;
-  }
-/*Solution-page*/
-  .flex-so {
-    flex-direction: column;
-    margin: 0;
-  }
-  .flex-leftso {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 10px;
-  }
-  .flex-rightso {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .topflex-sol{
-    flex-direction: column;
-  }
-  .topflex-solleft img{
-    max-width: 100%;
-  }
-
-  /****Hoved****/
-
-}
-
 /*************PROTYPE-PAGE****************/
 
 main{
@@ -565,6 +463,103 @@ main{
 }
 
 @media screen and (max-width: 800px){
+  /*Hjemside*/
+  .section-container {
+    flex-direction: column;
+  }
+  .intro {
+    flex-direction: column;
+    margin-bottom: 0.5vw;
+  }
+  .primary-heading {
+    width: auto;
+  }
+  #distancing {
+    margin: auto;
+    min-width: 70vw;
+    height: auto;
+  }
+  #crowd-image {
+    height: 20vh;
+    min-width: 40vw;
+    margin-top: 6vh;
+  }
+  #app-image {
+    width: 60vw;
+    margin: 5vh auto;
+  }
+  .section-image {
+    margin: 0;
+  }
+  /*PROBLEM-PAGE*/
+
+  .flex-challenge{
+    flex-direction: column;
+  }
+  .flex-challenge-right{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 30px;
+  }
+  .flex-challenge-right img{
+    max-width: 100%;
+  }
+  .flex-leftpro img{
+    max-width: 100%;
+  }
+  .center img{
+    max-width: 100%;
+  }
+  .text-wrap-left, .text-wrap-right{
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin: 10 0 10 0;
+  }
+  .flex-pro {
+    flex-direction: column;
+  }
+  .flex-leftpro {
+    display: block;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 30px;
+  }
+  .flex-rightpro {
+
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+  /*Solution-page*/
+  .flex-so {
+    flex-direction: column;
+    margin: 0;
+  }
+  .flex-leftso {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 10px;
+  }
+  .flex-rightso {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .topflex-sol{
+    flex-direction: column;
+  }
+  .topflex-solleft img{
+    max-width: 100%;
+  }
+
+  /****Hoved****/
+
+
+  /***PROTYPE***/
   main{
     align-items: center;
     text-align: center;
@@ -637,5 +632,4 @@ main{
     height: 45vh;
     width: 35vw;
   }
-
 }
