--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ h2 {
 }
 
 #sources{
-  background-color: #333548;
+  background-color: #22333b;
   border-radius: 2em;
   text-align: left;
   width: 70%;
