--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h2 {
 }
 
 .section-container {
-  width: 70%;
+  width: 75%;
   margin: auto;
   padding: 5vw;
   display: flex;
@@ -130,7 +130,7 @@ h2 {
 }
 
 .button {
-  background-color: #83453F;
+  background-color: #E26D5C;
   border: none;
   color: white;
   padding: 10px 20px;
@@ -194,8 +194,7 @@ h2 {
 
 #crowd-image {
   height: 19vw;
-  width: 30vw;
-  box-shadow: 5px 10px 8px #888888:
+  box-shadow: 5px 10px 8px #888888;
 }
 
 #app-image {
@@ -229,12 +228,12 @@ h2 {
 }
 
 #sources{
-  background-color: #22333b;
+  background-color: #333548;
   border-radius: 2em;
   text-align: left;
-  width: 70%;
+  width: 50%;
   margin: auto;
-  padding: 4vw;
+  padding: 2vw;
 }
 
 #sources *{
@@ -245,20 +244,6 @@ h2 {
 #cssChange{
   width: 5vw;
   height: 6vh;
-}
-.problem-text a:link {
-  color: #83453F;
-  background-color: transparent;
-  text-decoration: none;
-
-}
-.problem-text a:visited {
-  color: #83453F;
-  background-color: transparent;
-  text-decoration: none;
-}
-.problem-text a:hover {
-  text-decoration: underline;
 }
 /*Problem and solution*/
 .problem-text, .solution-text {
@@ -439,7 +424,6 @@ ul {
     margin-bottom: 10px;
   }
   #app-image {
-    height:40vw;
     width: 20vw;
     margin-top: 50px;
     margin-bottom: 10px;
@@ -535,7 +519,7 @@ main{
 .divices_txt{
   padding: 0em 6em;
   font-weight: 200;
-  font-size: 40px;
+  font-size: 28px;
   line-height: 1.5em;
 }
 .prototype{
@@ -585,6 +569,103 @@ main{
 }
 
 @media screen and (max-width: 800px){
+  /*Hjemside*/
+  .section-container {
+    flex-direction: column;
+  }
+  .intro {
+    flex-direction: column;
+    margin-bottom: 0.5vw;
+  }
+  .primary-heading {
+    width: auto;
+  }
+  #distancing {
+    margin: auto;
+    min-width: 70vw;
+    height: auto;
+  }
+  #crowd-image {
+    height: 20vh;
+    min-width: 40vw;
+    margin-top: 6vh;
+  }
+  #app-image {
+    width: 60vw;
+    margin: 5vh auto;
+  }
+  .section-image {
+    margin: 0;
+  }
+  /*PROBLEM-PAGE*/
+
+  .flex-challenge{
+    flex-direction: column;
+  }
+  .flex-challenge-right{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 30px;
+  }
+  .flex-challenge-right img{
+    max-width: 100%;
+  }
+  .flex-leftpro img{
+    max-width: 100%;
+  }
+  .center img{
+    max-width: 100%;
+  }
+  .text-wrap-left, .text-wrap-right{
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin: 10 0 10 0;
+  }
+  .flex-pro {
+    flex-direction: column;
+  }
+  .flex-leftpro {
+    display: block;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 30px;
+  }
+  .flex-rightpro {
+
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+  /*Solution-page*/
+  .flex-so {
+    flex-direction: column;
+    margin: 0;
+  }
+  .flex-leftso {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 10px;
+  }
+  .flex-rightso {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .topflex-sol{
+    flex-direction: column;
+  }
+  .topflex-solleft img{
+    max-width: 100%;
+  }
+
+  /****Hoved****/
+
+
+  /***PROTYPE***/
   main{
     align-items: center;
     text-align: center;
@@ -657,5 +738,4 @@ main{
     height: 45vh;
     width: 35vw;
   }
-
 }
