--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ h2 {
 }
 
 .button {
-  background-color: #E26D5C;
+  background-color: #AD0F3F;
   border: none;
   color: white;
   padding: 10px 20px;
