--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,9 @@ h2 {
 }
 
 #sources h1{
-  font-size: 4em;
+  font-size: 10vw;
   margin: 2vw auto;
-  text-align: left;
+  text-align: center;
 }
 
 #navbar img{
