--- a/css/style.css
+++ b/css/style.css
@@ -493,9 +493,6 @@ ul {
     margin: auto;
   }
   #crowd-image {
-    height:25vw;
-    width: 40vw;
-    margin-top: 50px;
     margin-bottom: 10px;
   }
   #app-image {
@@ -662,12 +659,12 @@ main{
   }
   #crowd-image {
     height: 20vh;
-    min-width: 40vw;
     margin-top: 6vh;
   }
   #app-image {
     width: 60vw;
     margin: 5vh auto;
+    max-height: none;
   }
   .section-image {
     margin: 0;
