--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,10 @@ h1{
   align-items: center;
   margin-top: 15vh;
 }
+
+.footer div{
+  margin: auto;
+}
 .footer-resources {
   flex: 45%;
   text-align: center;
@@ -105,6 +109,7 @@ h1{
   text-decoration: none;
 }
 .logo {
+  margin-left: 1em;
   flex: 10%;
   align-items: center;
 }
