--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,10 @@ h1{
 #navbar a:hover{
   text-decoration: underline;
 }
+#navbar .active {
+  text-decoration: underline;
+}
+
 
 #sources h1{
   font-size: 6vw;
