--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ h1{
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: 15vh;
+  margin-top: 10vh;
 }
 
 .footer div{
@@ -725,7 +725,7 @@ main{
 .divices_img{
   height: auto;
   width: 100%;
-  padding-top: 2em;
+  padding-top: 1em;
   padding-bottom: 1em;
 }
 .divices_img img{
@@ -739,12 +739,22 @@ main{
   line-height: 1.5em;
 }
 .prototype{
-  height: 32em;
+  height: 33em;
   width: 100%;
   padding: 0.5em;
 }
+.sensor_proto{
+  height: 25em;
+  padding-top: 1em;
+}
+.sensor_proto .app_img img {
+  height: 22em;
+}
 .app_txt h1{
   font-size: 30px;
+  margin-top: 10%;
+}
+.app_txt .home_txt{
   margin-top: 15%;
 }
 .app_txt p{
@@ -768,17 +778,18 @@ main{
 }
 .app_img img{
   height: 28em;
+  padding-top: 1em;
   width: auto;
 }
 .app_img .tablet_img{
   margin-top: 3em;
-  height: 20em;
+  height: 25em;
   width: auto;
 }
 
 
 /*******Resoinsive-Prototype-Page**********/
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 800px){
   .divices_img img{
     height: auto;
     max-width: 100%;
@@ -802,9 +813,10 @@ main{
   }
   .app_txt p{
     text-align: left;
-    margin-top: 1%;
-    margin-left:  1%;
-    margin-right: 1%;
+    margin-top: 1% 1% 0% 1%;
+  }
+  .app_txt .home_txt{
+    margin-top: 4%;
   }
   .wrapper_left{
     float: none;
@@ -833,7 +845,7 @@ main{
 @media screen and (min-width: 425px)and (max-width: 1000px){
     .app_img .tablet_img{
         margin-top: 0.1em;
-        height: 20em;
+        height: 25em;
         width: auto;
     }
 }
