--- a/css/style.css
+++ b/css/style.css
@@ -813,7 +813,9 @@ main{
   }
   .app_txt p{
     text-align: left;
-    margin-top: 1% 1% 0% 1%;
+    margin-top: 1%;
+    margin-right: 1%;
+    margin-left: 1%;
   }
   .app_txt .home_txt{
     margin-top: 4%;
